# cookiecutter-pyproject

./: README.rst  cookiecutter.json
hooks/: post_gen_project.sh
{{ cookiecutter.folder_name }}/: CONTRIBUTING.rst  LICENSE  README.rst  pyproject.toml
{{ cookiecutter.folder_name }}/.github/workflows/: ci.yml
{{ cookiecutter.folder_name }}/conda-recipe/: meta.yaml
{{ cookiecutter.folder_name }}/docs/: conf.py
