[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.project_name }}"
version = "0.0.0"
authors = [
  { name="{{ cookiecutter.author_name }}", email="{{ cookiecutter.email }}" },
]
description = "{{ cookiecutter.description }}"
readme = "README.rst"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware",
]
keywords = []
dependencies = []

[project.optional-dependencies]
dev = ["black", "pytest", "flake8", "isort"]

[project.urls]
Homepage = "https://github.com/{{ cookiecutter.github_repo_group }}/{{ cookiecutter.repo_name }}"

[project.scripts]
# command = "{{ cookiecutter.import_name }}.__main__:main"
